# cpp-best-practices_game_jam_1

./: CMakeLists.txt  LICENSE  README.md  build_examples.sh
configured_files/: config.hpp.in
src/: CMakeLists.txt  buttonbig.cpp  buttonbig.h  main.cpp
test/: CMakeLists.txt
